tests/NormalTests/paczka1/fuzzy1/29470292.err
Error in line 3: ckTK A347 16,9
Error in line 2: ZxcQUAEm S364 8,0
Error in line 1: wKDgbTf S900 30,5
Error in line 14: ckTK S525 10,8
Error in line 25: ZxcQUAEm S525 66,02
Error in line 31: S5Z5 A347 54,Z
Error in line 17: ZxcQUAEm S900 6,1
Error in line 29: S525 A347 37,9
Error in line 33: RZodZ0hiqxd A347 16,4
